style.css
/* ... */
.p-\[3px\]{
  padding: 3px;
}

.px-3{
  padding-left: 0.75rem;
  padding-right: 0.75rem;
}

.px-4{
  padding-left: 1rem;
  padding-right: 1rem;
}

.px-6{
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

.px-9{
  padding-left: 2.25rem;
  padding-right: 2.25rem;
}

.py-1{
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

.py-10{
  padding-top: 2.5rem;
  padding-bottom: 2.5rem;
}

.py-16{
  padding-top: 4rem;
  padding-bottom: 4rem;
}

.py-3{
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
}

.py-4{
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.py-\[0\.8rem\]{
  padding-top: 0.8rem;
  padding-bottom: 0.8rem;
}

.py-\[0\.9rem\]{
  padding-top: 0.9rem;
  padding-bottom: 0.9rem;
}

.pb-10{
  padding-bottom: 2.5rem;
}

.pb-8{
  padding-bottom: 2rem;
}

.pr-4{
  padding-right: 1rem;
}

.pt-10{
  padding-top: 2.5rem;
}

.pt-4{
  padding-top: 1rem;
}

.pt-8{
  padding-top: 2rem;
}

.pl-4{
  padding-left: 1rem;
}

.text-center{
  text-align: center;
}

.font-popi{
  font-family: Poppins;
}

.font-robo{
  font-family: Roboto;
}

.font-sans{
  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

.text-2xl{
  font-size: 1.5rem;
  line-height: 2rem;
}

.text-3xl{
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.text-5xl{
  font-size: 3rem;
  line-height: 1;
}

.text-\[0\.6rem\]{
  font-size: 0.6rem;
}

.text-\[0\.9rem\]{
  font-size: 0.9rem;
}

.text-\[2\.5rem\]{
  font-size: 2.5rem;
}

.text-base{
  font-size: 1rem;
  line-height: 1.5rem;
}

.text-lg{
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.text-sm{
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.text-xl{
  font-size: 1.25rem;
  line-height: 1.75rem;
}

.font-bold{
  font-weight: 700;
}

.font-light{
  font-weight: 300;
}

.font-medium{
  font-weight: 500;
}

.font-semibold{
  font-weight: 600;
}

.uppercase{
  text-transform: uppercase;
}

.italic{
  font-style: italic;
}

.leading-none{
  line-height: 1;
}

.leading-tight{
  line-height: 1.25;
}

.text-\[\#ecb22e\]{
  --tw-text-opacity: 1;
  color: rgb(236 178 46 / var(--tw-text-opacity));
}

.text-blue-400{
  --tw-text-opacity: 1;
  color: rgb(96 165 250 / var(--tw-text-opacity));
}

.text-gray-600{
  --tw-text-opacity: 1;
  color: rgb(75 85 99 / var(--tw-text-opacity));
}

.text-primary{
  --tw-text-opacity: 1;
  color: rgb(84 21 84 / var(--tw-text-opacity));
}

.text-white{
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.shadow-md{
  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.outline{
  outline-style: solid;
}

.outline-1{
  outline-width: 1px;
}

.outline-blue-500{
  outline-color: #3b82f6;
}

.outline-primary{
  outline-color: #541554;
}

.outline-white{
  outline-color: #fff;
}

.transition-all{
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.hover\:bg-primaryDark:hover{
  --tw-bg-opacity: 1;
  background-color: rgb(74 21 75 / var(--tw-bg-opacity));
}

.hover\:underline:hover{
  text-decoration-line: underline;
}

.hover\:outline-2:hover{
  outline-width: 2px;
}

.hover\:outline-primary:hover{
  outline-color: #541554;
}

.group:hover .group-hover\:bg-blue-600{
  --tw-bg-opacity: 1;
  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
}

@media (min-width: 640px){
  .sm\:h-80{
    height: 20rem;
  }
}

@media (min-width: 768px){
  .md\:relative{
    position: relative;
  }

  .md\:left-6{
    left: 1.5rem;
  }

  .md\:mr-0{
    margin-right: 0px;
  }

  .md\:inline-block{
    display: inline-block;
  }

  .md\:h-12{
    height: 3rem;
  }

  .md\:h-64{
    height: 16rem;
  }

  .md\:w-\[45\%\]{
    width: 45%;
  }

  .md\:w-\[48\%\]{
    width: 48%;
  }

  .md\:w-\[50\%\]{
    width: 50%;
  }

  .md\:w-\[52\%\]{
    width: 52%;
  }

  .md\:w-\[55\%\]{
    width: 55%;
  }

  .md\:w-screen{
    width: 100vw;
  }

  .md\:flex-row{
    flex-direction: row;
  }

  .md\:justify-around{
    justify-content: space-around;
  }

  .md\:gap-0{
    gap: 0px;
  }

  .md\:gap-10{
    gap: 2.5rem;
  }

  .md\:gap-20{
    gap: 5rem;
  }

  .md\:object-left{
    -o-object-position: left;
       object-position: left;
  }

  .md\:p-1{
    padding: 0.25rem;
  }

  .md\:p-14{
    padding: 3.5rem;
  }

  .md\:px-0{
    padding-left: 0px;
    padding-right: 0px;
  }

  .md\:px-12{
    padding-left: 3rem;
    padding-right: 3rem;
  }

  .md\:py-0{
    padding-top: 0px;
    padding-bottom: 0px;
  }

  .md\:py-24{
    padding-top: 6rem;
    padding-bottom: 6rem;
  }

  .md\:py-6{
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
  }

  .md\:pb-12{
    padding-bottom: 3rem;
  }

  .md\:pb-16{
    padding-bottom: 4rem;
  }

  .md\:pl-12{
    padding-left: 3rem;
  }

  .md\:pl-20{
    padding-left: 5rem;
  }

  .md\:pr-0{
    padding-right: 0px;
  }

  .md\:pr-10{
    padding-right: 2.5rem;
  }

  .md\:pt-8{
    padding-top: 2rem;
  }

  .md\:pl-0{
    padding-left: 0px;
  }

  .md\:text-left{
    text-align: left;
  }

  .md\:text-2xl{
    font-size: 1.5rem;
    line-height: 2rem;
  }

  .md\:text-4xl{
    font-size: 2.25rem;
    line-height: 2.5rem;
  }

  .md\:text-5xl{
    font-size: 3rem;
    line-height: 1;
  }

  .md\:text-6xl{
    font-size: 3.75rem;
    line-height: 1;
  }
}
/* ... */

